# QtBasics

./: .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  main.cpp
qml/: main.qml
